# water-agent-system

./: .gitignore  DATA_MANIFEST.md  PROJECT_STATUS.md  README.md  requirements.txt  run_offline_pipeline.py
configs/: agent_config.yaml  boundary_waterline_inversion.yaml  case_retrieval_config.yaml  dynamic_rain_visual_simulation.yaml  manual_mask_config.yaml  phase2d_c10_competition_demo.yaml  phase2d_c11_direct_agent.yaml  phase2d_c11_direct_e2e_20cm.yaml  phase2d_c11_direct_roi_mapping.yaml  phase2d_c11_simulation_e2e_runtime.yaml  phase2d_c11_simulation_sensor_pipeline.yaml  phase2d_c11_simulation_warning.yaml  phase2d_c11_simulation_weather.yaml  phase2d_c6b2_heldout_matrix.yaml  phase2d_c6c2_heldout_matrix.yaml  phase2d_c7_video_pilot.yaml  phase2d_c8_candidate_quality_gate.yaml  phase2d_c8_quality_gate_protocol.yaml  roi_mapping.yaml  (+24 more)
simulation/: README.md  package.xml  setup.cfg  setup.py
simulation/config/: scenarios.yaml  sensors.yaml  waterlogging_sim.rviz
simulation/launch/: waterlogging_sim.launch.py
simulation/models/road_basin/: model.config  model.sdf.in
simulation/models/roadside_sensor_rig/: model.config  model.sdf.in
simulation/models/water_surface/: model.config  model.sdf.in
simulation/scripts/: export_ground_truth.py  record_sim_bag.sh  set_scenario.py
simulation/tests/: conftest.py  test_ground_truth.py  test_manifest.py  test_mesh_sdf.py  test_scenarios.py  test_shutdown.py
simulation/waterlogging_simulation/: __init__.py  cli.py  config.py  generator.py  geometry.py  ground_truth_node.py
simulation/worlds/: low_lying_road.sdf
(+315 files in other folders)
